--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ img {
   background-color: var(--btn-background-color);
   color: var(--btn-color);
   padding: 20px;
+  font-size: 22px;
   border: 1px solid var(--btn-border-color);
 }
 #right {
